# everygarf

./: .gitignore  Cargo.toml  README.md  TODO.md  folder  install
src/: args.rs  date.rs  download.rs  fetch.rs  garf.rs  img.rs  lib.rs  main.rs  url.rs
src/api/: fast.rs  mod.rs  slow.rs
