[package]
name = "every-garfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
image = "0.24.6"
reqwest = "0.11.17"
tokio = { version = "1.28.1", features = ["full"] }
num_cpus = "1.15.0"
dirs-next = "2.0.0"
futures = "0.3.28"
notify-rust = "4.8.0"
