[package]
name = "everygarf"
version = "0.1.0"
edition = "2021"
authors = ["darcy"]

[dependencies]
chrono = "0.4.24"
reqwest = { version = "0.11.17", features = ["blocking"] }
image = "0.24.6"
clap = { version = "4.2.7", features = ["derive"] }
num_cpus = "1.15.0"
dirs-next = "2.0.0"
notify-rust = "4.8.0"
fs_extra = "1.3.0"
humantime = "2.1.0"
human_bytes = { version = "0.4.2", default-features = false }
